Changing Icon for switch btn and better position Tiptip class added to compact btns Added description in dropdown (compact mode) Fix plugin names too long

--- a/admin/themes/default/theme.css
+++ b/admin/themes/default/theme.css
@@ -1948,7 +1948,7 @@ h2:lang(en) { text-transform:capitalize; }
 .pluginBoxesTitle span {border-radius: 50%; margin-right: 5px; padding: 4px}
 
 .pluginBoxesTitle {display: flex;align-items: center}
-.pluginFilter {justify-content: end;position: absolute;right: 220px; z-index: 2; transform: translateY(6px);}
+.pluginFilter {justify-content: end;position: absolute;right: 170px; z-index: 2; transform: translateY(6px);}
 
 .pluginBoxesCount {
   background-color: rgb(150, 150, 150);
@@ -1999,6 +1999,16 @@ h2:lang(en) { text-transform:capitalize; }
   font-size: 14px;
   font-weight: bold;
 }
+
+.pluginMiniBoxNameCellCompact {
+  width: min-content;
+  max-width: 170px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  cursor: default;
+}
+
 
 .pluginDesc {
   margin-top: 5px;
